--- a/base_di_partenza/assets/css/style.css
+++ b/base_di_partenza/assets/css/style.css
@@ -168,7 +168,8 @@ svg {
   position: absolute;
   bottom: -30px;
   left: 0;
-  width: 100%;
+right: 0;
+width: 100%;
 }
 
 p,
@@ -388,7 +389,7 @@ aside div p:last-child {
   bottom: 20px;
   right: 10px;
   background-color: rgba(255, 255, 255, 0.72);
-  padding: 10px 20px;
+  padding: 10px 12px;
   border: 2px solid white;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
@@ -406,7 +407,7 @@ aside div p:last-child {
   top: 15px;
   right: 10px;
   background-color: rgba(255, 255, 255, 0.72);
-  padding: 10px 20px;
+  padding: 10px 12px;
   border: 2px solid white;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
@@ -419,7 +420,7 @@ aside div p:last-child {
   top: 105px;
   right: 10px;
   background-color: rgba(255, 255, 255, 0.72);
-  padding: 10px 20px;
+  padding: 10px 12px;
   border: 2px solid white;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
